schema/testdata/errors/duplicate_explicit_inputs.keel
model B {
    fields {
        name Text
    }

    actions {
        //expect-error:25:35:NamingError:'name' has already been defined as a query input on this action
        //expect-error:25:29:ActionInputError:name is not used. Labelled inputs must be used in the action, for example in a @set or @where attribute
        list list(name, name: Text)
        //expect-error:45:60:NamingError:'something' has already been defined as a query input on this action
        //expect-error:45:54:ActionInputError:something is not used. Labelled inputs must be used in the action, for example in a @set or @where attribute
        list listExplicits(something: Text, something: Text)
    }

    actions {
        //expect-error:27:37:NamingError:'name' has already been defined as a query input on this action
        //expect-error:27:31:ActionInputError:name is not used. Labelled inputs must be used in the action, for example in a @set or @where attribute
        list listFn(name, name: Text)
        //expect-error:47:62:NamingError:'something' has already been defined as a query input on this action
        //expect-error:47:56:ActionInputError:something is not used. Labelled inputs must be used in the action, for example in a @set or @where attribute
        list listExplicitsFn(something: Text, something: Text)
    }
}
